--- a/.github/workflows/github-box.yml
+++ b/.github/workflows/github-box.yml
@@ -14,5 +14,5 @@ jobs:
         uses: maxam2017/productive-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: 9842e074b8ee46aef76fd0d493bae0ed
-          TIMEZONE: Asia/Taipei
+          GIST_ID: 5be7594735d261c9ccddf19f0034c855
+          TIMEZONE: Asia/Bangkok
