--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -15,4 +15,4 @@ jobs:
         with:
           comment_tag_name: "BLOG"
           commit_message: "Updated readme with the latest Blog data"
-          feed_list: "https://skiddle.id/sitemap.xml"
+          feed_list: "https://medium.com/feed/catatan-arcestia/"
