--- a/.github/workflows/duolingo-stats.yml
+++ b/.github/workflows/duolingo-stats.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: centrumek/duolingo-readme-stats@main
         with:
-          DUOLINGO_USER_ID: 221394927
-          COMMIT_EMAIL: vrusolik@gmail.com
-          COMMIT_USERNAME: arcestia
+          DUOLINGO_USER_ID: '221394927'
+          COMMIT_EMAIL: 'vrusolik@gmail.com'
+          COMMIT_USERNAME: 'arcestia'
+          COMMIT_MSG: 'Updating Duolingo Stats'
+          SHOW_LANGUAGES: false
