--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -18,6 +18,8 @@ jobs:
           readme_path: BLOG-POSTS.md
           gh_token: ${{ secrets.BOT_GITHUB_TOKEN }}
           commit_message: '📰 Updates recent blog posts (all)'
+          committer_username: Skiddle-Git
+          committer_email: 160487326+Skiddle-Git@users.noreply.github.com
       - name: Pull in listed.to posts into readme
         uses: gautamkrishnar/blog-post-workflow@v1
         with:
@@ -26,3 +28,5 @@ jobs:
           readme_path: README.md
           gh_token: ${{ secrets.BOT_GITHUB_TOKEN }}
           commit_message: '📰 Updates recent blog posts (short)'
+          committer_username: Skiddle-Git
+          committer_email: 160487326+Skiddle-Git@users.noreply.github.com
