--- a/.github/workflows/duolingo-stats.yml
+++ b/.github/workflows/duolingo-stats.yml
@@ -18,5 +18,5 @@ jobs:
           DUOLINGO_USER_ID: '221394927'
           COMMIT_EMAIL: 160487326+Skiddle-Git@users.noreply.github.com
           COMMIT_USERNAME: Skiddle-Git
-          COMMIT_MSG: 'Updating Duolingo Stats'
+          COMMIT_MSG: Updating Duolingo Stats
           SHOW_LANGUAGES: false
