--- a/.github/workflows/waka-box.yml
+++ b/.github/workflows/waka-box.yml
@@ -8,9 +8,8 @@ jobs:
   update-gist:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
       - name: Update gist
-        uses: g1eny0ung/waka-box@v6.2.1
+        uses: g1eny0ung/waka-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: 01ed91aa2cb0025e9d60e81dab67c615
