--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -2,7 +2,7 @@ name: 📰 Update Blog Post List
 on:
   workflow_dispatch: # Manual dispatch
   schedule:
-    - cron: '0 1 * * 0' # At 01:00 on Sunday.
+    - cron: '0 1 * * *' # At 01:00 Everyday.
 jobs:
   get-posts:
     name: Get Blog Posts from RSS Feed
